--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1283,7 +1283,10 @@ app doing the data requests, not a malicious bot)
 
 -------------------------------------------------------------------
 3.13.0:
--Portfolio dominance stats summary info bubble for all held assets (hovering over info icon in stats summary)
+-Portfolio dominance stats summary info bubble for all held assets (hovering over info icon in stats summary @ bottom of portfolio page)
+-Secure backup archives system
+-Chart backups option
+-Config settings semantics
 -------------------------------------------------------------------
 
 
