Minor UX revisions
Minor UX revisions

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1307,30 +1307,10 @@ app doing the data requests, not a malicious bot)
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+-------------------------------------------------------------------
+3.15.0:
+-Minor UX revisions
+-------------------------------------------------------------------
 
 
 
