--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1334,6 +1334,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.17.0:
+-Minor UX revisions
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
