Pretty number formatting, while maintaining decimals
Pretty number formatting, while maintaining decimals

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1338,6 +1338,7 @@ app doing the data requests, not a malicious bot)
 3.17.0:
 -Minor revisions
 -Changed error logs config to be every X days (instead of only daily/weekly)
+-Pretty number formatting, while maintaining decimals
 -------------------------------------------------------------------
 
 
