--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1339,6 +1339,8 @@ app doing the data requests, not a malicious bot)
 -Minor revisions
 -Changed error logs config to be every X days (instead of only daily/weekly)
 -Pretty number formatting, while maintaining decimals
+-Volume percent change with price alerts
+-Select / unselect all unheld assets to view in UI as 'watch only'
 -------------------------------------------------------------------
 
 
