--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1372,6 +1372,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.19.0:
+-Better UX on price alert wording
+-------------------------------------------------------------------
+
+
+
+
 
 
 
