--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1375,6 +1375,8 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 3.19.0:
 -Better UX on price alert wording
+-Verbose error logging for chart and price alert errors
+-Gain / loss summary in page tab title
 -------------------------------------------------------------------
 
 
