Additions to FAQ.txt / Help page
Additions to FAQ.txt / Help page

--- a/FAQ.txt
+++ b/FAQ.txt
@@ -103,3 +103,23 @@ If you have none of these error log messages, your issue may be file / folder pe
 
 
 =========================================================================================================================================
+
+  Write Errors In Error Log For Charts / Other Data
+  
+-----------------------------------------------------------------------------------------------------------------------------------------
+
+If you have a lot of charts setup in your configuration file, and your are getting a message in the error logs like "file_write_error: File write failed for file X", and your website server is running a linux-based operating system, you may need to setup a higher "open files" limit for your website user account. 
+
+First, if you have shell access you can login and run this command to check your current limits:
+
+ulimit -n
+
+If it's a low number like 1024, this may be the cause of your file write error issue (especially if you run multiple web apps that write a lot of data on the same account). If you are running a dedicated or VPS server, you can easily change this limit. 
+
+Running a google search for "set permanently ulimit -n linux", you'll find tons of articles on permanently upping your user's open files limit:
+
+https://www.google.com/search?q=set+permanently+ulimit+-n+linux
+
+
+=========================================================================================================================================
+
