--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1382,6 +1382,13 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.19.0:
+-Additions to FAQ.txt / Help page
+-------------------------------------------------------------------
+
+
+
 
 
 
