--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1406,6 +1406,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.18.6:
+-Bug fix for pretty numbers in new CSV file export feature (was rounded up if high decimal)
+-------------------------------------------------------------------
+
+
+
+
 
 
 
