Local time config for UX / UI, notifyme (alexa) alerts timestamping
-Local time configuration setting
-Timestamping for notifyme (alexa) alerts

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1413,6 +1413,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.19.0:
+-Local time configuration setting
+-Timestamping for notifyme (alexa) alerts
+-------------------------------------------------------------------
+
+
+
 
 
 
