--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1422,6 +1422,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.19.1:
+-Bug fix for layout spacing with the new margin leverage fields, on the Update Assets page
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
