--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1461,6 +1461,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.22.0:
+-Block volume error configuration setting
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
