Modularized some code into separate files / functions, UX tweaks
Modularized some code into separate files / functions, UX tweaks

--- a/misc-docs-etc/TODO.txt
+++ b/misc-docs-etc/TODO.txt
@@ -4,6 +4,8 @@
 TODO
 ///////////////////////////////////////////////////////
 
+See if at all feasible to fully modularize mining calculators to be added via config file settings
+
 Add Dogecoin and mining calculator.
 
 Dark greyscale CSS styling option, and theme switcher settings
