--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1465,6 +1465,7 @@ app doing the data requests, not a malicious bot)
 3.22.0:
 -Block volume error configuration setting
 -UI / UX tweaks
+-Modularized some code into separate files / functions
 -------------------------------------------------------------------
 
 
