UI / UX tweaks, More USDC markets in default config
UI / UX tweaks, More USDC markets in default config

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1471,6 +1471,17 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.23.0:
+-UI / UX tweaks
+-More USDC markets in default config
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
