--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1480,6 +1480,17 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.23.1:
+-Bug fix on Update Assets page for checkboxes
+-Compatibility CSS for charts
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
