Dark theme / theme switcher
Dark theme / theme switcher

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1488,6 +1488,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.24.0:
+-Added dark color scheme, and color scheme switcher setting 
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
