Consolidated theme-coloring-only CSS
Consolidated theme-coloring-only CSS

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1495,6 +1495,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.25.0:
+-Consolidated theme-coloring-only CSS
+-------------------------------------------------------------------
+
+
+
+
 
 
 
