Price alert UX improvements
Price alert UX improvements

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1503,6 +1503,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.26.0:
+-Price alert UX improvements
+-------------------------------------------------------------------
+
+
+
+
 
 
 
