--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1510,6 +1510,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.25.2:
+-Price alert volume filter bug fix
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
