--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1517,6 +1517,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.26.0:
+-UX improvements
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
