--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1524,6 +1524,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.26.1:
+-Bug fix for countdown timer (when charts page is turned off)
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
