--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1531,6 +1531,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.27.0:
+-Leverage trading warning for newbies
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
