--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1545,6 +1545,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.29.0:
+-Minor UX / content revisions
+-------------------------------------------------------------------
+
+
+
+
 
 
 
