--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1559,6 +1559,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.29.2:
+-Fixed BTC/USD charts bug
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
