--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1566,6 +1566,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.30.0:
+-Leverage trading UX / UI
+-------------------------------------------------------------------
+
+
+
+
 
 
 
