--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1574,6 +1574,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.31.0:
+-UX revisions
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
