UX / UI improvements
UX / UI improvements

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1585,6 +1585,7 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 3.32.0:
 -Optimizations
+-UX / UI improvements
 -------------------------------------------------------------------
 
 
