UX / UI improvements
UX / UI improvements

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1599,6 +1599,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.32.0:
+-UX / UI improvements
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
