--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1606,6 +1606,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.33.0:
+-UX improvements
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
