--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1613,6 +1613,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.34.0:
+-Consolidated all error logging code
+-Removed excess verbosity in error logging
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
