--- a/misc-docs-etc/TODO.txt
+++ b/misc-docs-etc/TODO.txt
@@ -4,6 +4,8 @@
 TODO
 ///////////////////////////////////////////////////////
 
+Add support for automated install script on more debian-based systems (with openssh-server install option, and choosing the apache document root location) 
+
 Add feature to restore chart data from the zip archive backups, with some sort of authentication (maybe confirm restore from emailed link with the unique backup file name).
 
 Stats in UI using chart data (if available), to show spot / volume percent changes over an end-user-defined time period.
