Minor UI / UX revisions
Minor UI / UX revisions

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1652,7 +1652,8 @@ app doing the data requests, not a malicious bot)
 
 -------------------------------------------------------------------
 3.36.0:
--Security error semantics in error logging.
+-Security error semantics in error logging
+-Minor UI / UX revisions
 -------------------------------------------------------------------
 
 
