--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1662,6 +1662,7 @@ app doing the data requests, not a malicious bot)
 3.37.0:
 -Optimized back end directory / file structure
 -Less initialization code in config.php
+-Improved UX for chart loading / cookies / raspberry pi auto-install-upgrade script
 -------------------------------------------------------------------
 
 
